compiler/testData/diagnostics/tests/recovery/emptyTypeArgs.kt
fun main(args: Array<String>) {
    args is Array<<!SYNTAX!><!>>
}